--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,20 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="../src/index.css" />
+    <style>
+      ::-webkit-scrollbar {
+        width: 10px;
+      }
+
+      ::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 3px grey;
+      }
+      ::-webkit-scrollbar-thumb {
+        background: #425068;
+        border-radius: 4px;
+      }
+    </style>
+
     <script type="text/javascript">
       (function (l) {
         if (l.search[1] === "/") {
